--- a/app/views/fichas/taxa/_form_ficha.erb
+++ b/app/views/fichas/taxa/_form_ficha.erb
@@ -57,6 +57,22 @@
     </ul>
 
     <div class="tab-content">
+
+
+<button class="btn btn-primary" id="coconana" type="button">
+  picame
+</button>
+
+
+      <%#= link_to_add_association('<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Distribucion'.html_safe, f, :habitats, partial: 'fichas/taxa/seccion_distribucion/form_distribucion_habitad', :class => 'btn btn-info btn-sm', render_options: { locals: { f_taxon: f} }, role: 'tab', "data-toggle" => 'tab', "aria-controls" => 'distribucion', 'data-association-insertion-node' => '#distribucion', 'data-association-insertion-method' => 'append', href: '#distribucion', style: 'display: none;') if @taxon.new_record? %>
+
+      <%= link_to_add_association('<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Invasividad'.html_safe, f,
+                                  :invasividad, partial: 'fichas/taxa/seccion_invasoras/form_invasoras_invasividad', :class => 'btn btn-info btn-sm', render_options: { locals: { f_taxon: f} },
+                                  role: 'tab', "data-toggle" => 'tab', "aria-controls" => 'prioritaria-conservacion',
+                                  'data-association-insertion-node' => '#prioritaria-conservacion', 'data-association-insertion-method' => 'append',
+                                  href: '#prioritaria-conservacion', style: 'display: none;') if @taxon.new_record? %>
+<div id="lolo"></div>
+
       <div id="clasificacion-descripcion" role="tabpanel" class="tab-pane fade in panel-body active">
         <hr />
         <h3 class="text-center titulo-seccion text-primary"><%=t('general.titulos_secciones.clasificacion_y_descripcion')%></h3>
@@ -71,34 +87,7 @@
         <% end %>
       </div>
 
-      <div id='distribucion' role="tabpanel" class="tab-pane fade panel-body">
-        <hr />
-        <h3 class="text-center titulo-seccion text-primary"><%=t('general.titulos_secciones.distribucion')%></h3>
 
-        <% # OCUPA: habitat, distribucion, endemica  %>
-        <%= f.simple_fields_for :distribuciones do |info| %>
-          <%= render partial: 'fichas/taxa/seccion_distribucion/form_distribucion_distribucion', locals: {f: info, f_taxon: f } %>
-        <% end %>
-        <%#= link_to_add_association(
-                '<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Distribucion'.html_safe,
-                f,
-                :habitats,
-                partial: 'fichas/taxa/seccion_distribucion/form_distribucion_habitad',
-                :class => 'btn btn-info btn-sm',
-                render_options: { locals: { f_taxon: f} },
-                role: 'tab', "data-toggle" => 'tab',
-                "aria-controls" => 'distribucion',
-                'data-association-insertion-node' => '#distribucion',
-                'data-association-insertion-method' => 'append',
-                href: '#distribucion', style: 'display: none;'
-            ) if @taxon.new_record? || @taxon.habitats.blank? %>
-        <%= f.simple_fields_for :habitats  do |info| %>
-          <%= render partial: 'fichas/taxa/seccion_distribucion/form_distribucion_habitad', locals: { f: info, f_taxon: f } %>
-        <% end %>
-        <%= f.simple_fields_for :endemicas do |info| %>
-          <%= render partial: 'fichas/taxa/seccion_distribucion/form_distribucion_endemica', locals: { f: info, f_taxon: f } %>
-        <% end %>
-      </div>
 
       <div id='ambiente' role="tabpanel" class="tab-pane fade panel-body">
         <hr />
