Versión bàsica de búsqueda por idCat o taxonomía

--- a/app/assets/stylesheets/fichas.css
+++ b/app/assets/stylesheets/fichas.css
@@ -77,3 +77,8 @@
     background-color: #E5E5E5;
     padding: 30px;
 }
+
+#indicacionAgregarTaxo {
+    font-size: 12px;
+    padding: 5px 0 0 0;
+}
